--- a/index.html
+++ b/index.html
@@ -1,11 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Planet Earth</title>
 </head>
+
 <body>
-    
+    <header class="header">
+        <img src="images/earth1.png" alt="earth1" class="earth1">
+        <div class="container">
+            <h1>PLANET EARTH IS FULLY DESCRIBED</h1>
+            <h2>Earth is the third planet from the Sun. Located in the Solar System, the Milky Way galaxy. It is the
+                densest
+                among the other planets of the Solar System.</h2>
+            <p>The whole world around us is called the Universe. It consists of galaxies, which are clusters of stars,
+                interstellar dust, gas, planets. There are quite a lot of galaxies in the universe. The Milky Way
+                cluster of
+                stars includes the Solar System. Earth is a planet of the Solar system. In its central part is the
+                brightest
+                star — the Sun. Space objects are orbiting around it.</p>
+        </div>
+    </header>
+    <main class="main">
+        <div class="container">
+            <p>The main characteristics of the Earth
+                Diameter: 12,742 km
+                Weight: 5.97 x 10^24 kg
+                Density: 5.52 g/cm^3
+                Sidereal day: 23 h 56 min 4.1 sec
+                Sidereal year: 365.25636 days
+                Atmosphere: 78% nitrogen, 21% oxygen, 1% argon and other gases
+                Average temperature: 15°C (59°F)
+                Rotation speed at the equator: about 1,670 km/h
+                Gravity: 9.8 m/s^2</p>
+
+            <img src="images/earth2.png" alt="earth2" class="earth2">
+        </div>
+    </main>
+    <footer class="footer">
+        <div class="container">
+            <img src="images/space1.png" alt="space1" class="space1">
+            <img src="images/space2.png" alt="space2" class="space2">
+        </div>
+
+        <div class="texts">
+            <h1>Undoubtedly, the most famous is the first person to fly into space – Yuri Gagarin. The Soviet pilot took
+                a
+                huge step for humanity on April 12, 1961, when he reached space and completed one orbit around the
+                Earth. It
+                is noteworthy that the man whose smile is known throughout the world collected cacti and was fond of
+                water
+                skiing. Unfortunately, the life of the outstanding cosmonaut ended prematurely during a training flight
+                on
+                March 27, 1968. On August 1, 1971, the Apollo 15 crew erected a memorial on the Moon called “Fallen
+                Astronaut.” The memorial is an aluminum plate with engraved names of 14 cosmonauts, including Yuri
+                Alekseevich Gagarin.</p>
+                <h2>The word ship was historically used to refer to seagoing vessels crewed by sailors. With the advent
+                    of
+                    aviation, large passenger aircraft began to be called ships, which are also served by a crew led by
+                    the
+                    ship’s commander during the flight. When people flew into space, they traditionally began to call
+                    flying
+                    spacecraft with a crew on board spaceships.</p>
+        </div>
+        <img src="images/earth3.png" alt="earth3" class="earth3">
+    </footer>
 </body>
+
 </html>
